--- a/world/ruby-addressable/.artixlinux/pkgbase.yaml
+++ b/world/ruby-addressable/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-addressable
-  version: 2.8.6-5
+  version: 2.8.7-2
   arch:
     - any
   pkgname:
     - ruby-addressable
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.8.6-5
+    version: 2.8.7-2
     packages:
-      - ruby-addressable-2.8.6-5-any.pkg.tar.zst
+      - ruby-addressable-2.8.7-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
