--- a/world/pixman/.artixlinux/pkgbase.yaml
+++ b/world/pixman/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: pixman
-  version: 0.44.2-1
+  version: 0.46.0-1
   arch:
     - x86_64
   pkgname:
     - pixman
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.44.2-1
+    version: 0.46.0-1
     packages:
-      - pixman-0.44.2-1-x86_64.pkg.tar.zst
+      - pixman-0.46.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
