--- a/world/yodl/.artixlinux/pkgbase.yaml
+++ b/world/yodl/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: yodl
-  version: 4.03.03-4
+  version: 4.05.00-1
   arch:
     - x86_64
   pkgname:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.03.03-4
+    version: 4.05.00-1
     packages:
-      - yodl-4.03.03-4-x86_64.pkg.tar.zst
+      - yodl-4.05.00-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
