--- a/world/nodejs-lts-iron/.artixlinux/pkgbase.yaml
+++ b/world/nodejs-lts-iron/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: nodejs-lts-iron
-  version: 20.19.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - nodejs-lts-iron
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 20.19.0-1
+    version: 20.19.1-1
     packages:
-      - nodejs-lts-iron-20.19.0-1-x86_64.pkg.tar.zst
+      - nodejs-lts-iron-20.19.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
