--- a/world/openucx/PKGBUILD
+++ b/world/openucx/PKGBUILD
@@ -1,10 +1,9 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: Jakub Klinkovský <lahwaacz at archlinux dot org>
+# Maintainer: Jakub Klinkovský <lahwaacz at archlinux dot org>
 
 _name=ucx
 pkgname=openucx
-pkgver=1.18.0
-pkgrel=3
+pkgver=1.18.1
+pkgrel=1
 pkgdesc="Communication framework for data-centric and high-performance applications"
 arch=(x86_64)
 url="https://openucx.org/"
@@ -19,8 +18,7 @@ depends=(
 makedepends=(
   rdma-core
   cuda
-  # would need import, do we want the rocm?
-  # rocm-language-runtime
+  rocm-language-runtime
 )
 optdepends=(
   'rdma-core: for InfiniBand and RDMA support'
@@ -35,14 +33,14 @@ provides=(
   libuct.so
 )
 source=("$pkgname-$pkgver.tar.gz::https://github.com/openucx/$_name/archive/refs/tags/v$pkgver.tar.gz")
-b2sums=('54df4a27d279be1627f10f7b4295d979b5247e430f76958349ab96f4f77cd349b2f0f19f44f25102bc6712ea654a6983b8299eed63c3f9127d1f24509934663c')
+b2sums=('4fcf866c6a446f367fc1e8981b1272f405a081d0f241f7f7bc0e7a1cef961230a8b4e07d7e72e4366c80846d3d517f3998cfdc79afcf7c67ebdb8cd82bbf985b')
 
 build() {
   local configure_options=(
     --prefix=/usr
     --sysconfdir=/etc
     --with-cuda=/opt/cuda
-   # --with-rocm=/opt/rocm
+    --with-rocm=/opt/rocm
     --with-verbs
     --with-rc
     --with-ud
