--- a/system/s6-linux-init/PKGBUILD
+++ b/system/s6-linux-init/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Dudemanguy <dudemanguy@artixlinux.org>
 pkgname=s6-linux-init
-pkgver=1.1.2.1
+pkgver=1.1.3.0
 pkgrel=1
 pkgdesc='A tool to automate the creation of suitable stage 1 init binaries for s6-based Linux systems.'
 arch=('x86_64')
@@ -17,7 +17,7 @@ source=("https://skarnet.org/software/${pkgname}/${pkgname}-${pkgver}.tar.gz"
         "rc.shutdown"
         "rc.shutdown.final"
         "runlevel")
-sha256sums=('971e014a229b7f47a128721dd714f8d493c4ac644e465197b6599a9640966530'
+sha256sums=('d11b596b719ac134f77eb19450907d1fe6d84b4adc36d44ef748dbe55487b3ed'
             '0e9cfda4e290314760b8d0915251e11d373e1a57851e9f68770d7d0f1f5bca44'
             'b8b5b7fc0de3c8870be83094071f3c82b98134a9223576e1c518bb8e7b6b5344'
             '524df97d15ea7cbcd885dd9a2e5af1f6411c41614e5c8125807412cc2e07c65a'
@@ -28,8 +28,11 @@ build() {
   ./configure --prefix=/usr \
               --libexecdir=/usr/lib \
               --skeldir=/etc/s6/skel \
+              --disable-allstatic \
+              --disable-static \
+              --enable-pkgconfig \
               --enable-shared \
-              --disable-static
+              --with-pkgconfig
   make
 }
 
