--- a/world/python-django-debug-toolbar/.artixlinux/pkgbase.yaml
+++ b/world/python-django-debug-toolbar/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: python-django-debug-toolbar
-  version: 5.0.1-1
-  arch:
-    - any
-  pkgname:
-    - python-django-debug-toolbar
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 5.0.1-1
+    version: 5.2.0-1
     packages:
-      - python-django-debug-toolbar-5.0.1-1-any.pkg.tar.zst
+      - python-django-debug-toolbar-5.2.0-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
