--- a/world/syncthing/.artixlinux/pkgbase.yaml
+++ b/world/syncthing/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: syncthing
-  version: 1.29.5-1
-  arch:
-    - x86_64
-  pkgname:
-    - syncthing
-    - syncthing-discosrv
-    - syncthing-relaysrv
 actions:
   addRepo: world
   removeRepo: null
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.29.5-1
+    version: 1.29.6-1
     packages:
-      - syncthing-1.29.5-1-x86_64.pkg.tar.zst
-      - syncthing-discosrv-1.29.5-1-x86_64.pkg.tar.zst
-      - syncthing-relaysrv-1.29.5-1-x86_64.pkg.tar.zst
+      - syncthing-1.29.6-1-x86_64.pkg.tar.zst
+      - syncthing-discosrv-1.29.6-1-x86_64.pkg.tar.zst
+      - syncthing-relaysrv-1.29.6-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
