--- a/system/linux-lts/.artixlinux/pkgbase.yaml
+++ b/system/linux-lts/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: linux-lts
-  version: 6.12.26-1
-  arch:
-    - x86_64
-  pkgname:
-    - linux-lts
-    - linux-lts-headers
-    - linux-lts-docs
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 6.12.26-1
+    version: 6.12.27-1
     packages:
-      - linux-lts-6.12.26-1-x86_64.pkg.tar.zst
-      - linux-lts-headers-6.12.26-1-x86_64.pkg.tar.zst
-      - linux-lts-docs-6.12.26-1-x86_64.pkg.tar.zst
+      - linux-lts-6.12.27-1-x86_64.pkg.tar.zst
+      - linux-lts-headers-6.12.27-1-x86_64.pkg.tar.zst
+      - linux-lts-docs-6.12.27-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
