--- a/world/packagekit/.artixlinux/pkgbase.yaml
+++ b/world/packagekit/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: packagekit
-  version: 1.3.0-2
-  arch:
-    - x86_64
-  pkgname:
-    - packagekit
-    - libpackagekit-glib
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.3.0-2
+    version: 1.3.1-1
     packages:
-      - packagekit-1.3.0-2-x86_64.pkg.tar.zst
-      - libpackagekit-glib-1.3.0-2-x86_64.pkg.tar.zst
+      - packagekit-1.3.1-1-x86_64.pkg.tar.zst
+      - libpackagekit-glib-1.3.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
