--- a/world/php/.artixlinux/pkgbase.yaml
+++ b/world/php/.artixlinux/pkgbase.yaml
@@ -1,85 +1,75 @@
 ---
-pkgbase:
-  name: php
-  version: 8.4.6-2
-  arch:
-    - x86_64
-  pkgname:
-    - php
-    - php-cgi
-    - php-apache
-    - php-fpm
-    - php-embed
-    - php-phpdbg
-    - php-dblib
-    - php-enchant
-    - php-gd
-    - php-sodium
-    - php-odbc
-    - php-pgsql
-    - php-snmp
-    - php-sqlite
-    - php-tidy
-    - php-xsl
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 8.4.6-2
+    version: 8.4.7-1
     packages:
-      - php-8.4.6-2-x86_64.pkg.tar.zst
-      - php-cgi-8.4.6-2-x86_64.pkg.tar.zst
-      - php-apache-8.4.6-2-x86_64.pkg.tar.zst
-      - php-fpm-8.4.6-2-x86_64.pkg.tar.zst
-      - php-embed-8.4.6-2-x86_64.pkg.tar.zst
-      - php-phpdbg-8.4.6-2-x86_64.pkg.tar.zst
-      - php-dblib-8.4.6-2-x86_64.pkg.tar.zst
-      - php-enchant-8.4.6-2-x86_64.pkg.tar.zst
-      - php-gd-8.4.6-2-x86_64.pkg.tar.zst
-      - php-sodium-8.4.6-2-x86_64.pkg.tar.zst
-      - php-odbc-8.4.6-2-x86_64.pkg.tar.zst
-      - php-pgsql-8.4.6-2-x86_64.pkg.tar.zst
-      - php-snmp-8.4.6-2-x86_64.pkg.tar.zst
-      - php-sqlite-8.4.6-2-x86_64.pkg.tar.zst
-      - php-tidy-8.4.6-2-x86_64.pkg.tar.zst
-      - php-xsl-8.4.6-2-x86_64.pkg.tar.zst
+      - php-8.4.7-1-x86_64.pkg.tar.zst
+      - php-cgi-8.4.7-1-x86_64.pkg.tar.zst
+      - php-apache-8.4.7-1-x86_64.pkg.tar.zst
+      - php-fpm-8.4.7-1-x86_64.pkg.tar.zst
+      - php-embed-8.4.7-1-x86_64.pkg.tar.zst
+      - php-phpdbg-8.4.7-1-x86_64.pkg.tar.zst
+      - php-dblib-8.4.7-1-x86_64.pkg.tar.zst
+      - php-enchant-8.4.7-1-x86_64.pkg.tar.zst
+      - php-gd-8.4.7-1-x86_64.pkg.tar.zst
+      - php-sodium-8.4.7-1-x86_64.pkg.tar.zst
+      - php-odbc-8.4.7-1-x86_64.pkg.tar.zst
+      - php-pgsql-8.4.7-1-x86_64.pkg.tar.zst
+      - php-snmp-8.4.7-1-x86_64.pkg.tar.zst
+      - php-sqlite-8.4.7-1-x86_64.pkg.tar.zst
+      - php-tidy-8.4.7-1-x86_64.pkg.tar.zst
+      - php-xsl-8.4.7-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
