--- a/world/virtualbox-host-modules-artix/.artixlinux/pkgbase.yaml
+++ b/world/virtualbox-host-modules-artix/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: virtualbox-host-modules-artix
-  version: 7.1.8-3
-  arch:
-    - x86_64
-  pkgname:
-    - virtualbox-host-modules-artix
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 7.1.8-3
+    version: 7.1.8-5
     packages:
-      - virtualbox-host-modules-artix-7.1.8-3-x86_64.pkg.tar.zst
+      - virtualbox-host-modules-artix-7.1.8-5-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
