--- a/world/broadcom-wl/.artixlinux/pkgbase.yaml
+++ b/world/broadcom-wl/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: broadcom-wl
-  version: 6.30.223.271-615
-  arch:
-    - x86_64
-  pkgname:
-    - broadcom-wl
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 6.30.223.271-615
+    version: 6.30.223.271-617
     packages:
-      - broadcom-wl-6.30.223.271-615-x86_64.pkg.tar.zst
+      - broadcom-wl-6.30.223.271-617-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
