--- a/galaxy/artix-metro/.artixlinux/pkgbase.yaml
+++ b/galaxy/artix-metro/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
 team: galaxy
-pkgbase:
-  name: artix-metro
-  version: 3.1.3-1
-  arch:
-    - any
-  pkgname:
-    - artix-metro
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 3.1.3-1
+    version: 3.1.4-1
     packages:
-      - artix-metro-3.1.3-1-any.pkg.tar.zst
+      - artix-metro-3.1.4-1-any.pkg.tar.zst
+    debug: []
