--- a/system/mdevd/.artixlinux/pkgbase.yaml
+++ b/system/mdevd/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: system
-pkgbase:
-  name: mdevd
-  version: 0.1.6.5-1
-  arch:
-    - x86_64
-  pkgname:
-    - mdevd
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 0.1.6.5-1
+    version: 0.1.7.0-1
     packages:
-      - mdevd-0.1.6.5-1-x86_64.pkg.tar.zst
+      - mdevd-0.1.7.0-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
